Opened 11 years ago
Closed 11 years ago
#10804 closed bug (fixed)
[package_daemon] crashes while building faad2 via haikuporter
Reported by: | diver | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/package_daemon | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #10805 | |
Platform: | All |
Attachments (1)
Change History (3)
by , 11 years ago
Attachment: | package_daemon-120728-debug-30-04-2014-22-24-49.report added |
---|
comment:1 by , 11 years ago
Blocking: | 10805 added |
---|
comment:2 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
I just saw the package_daemon crashing all over the place when having another go at bootstrapping Haiku.
Should be fixed in hrev47187.
Note:
See TracTickets
for help on using tickets.
(In #10805) Duplicate of #10804.