Fix #10804: package_daemon crashing in Volume destructor.

* use delete [] for fPackagesDirectories, as it has been allocated
  via array new